--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: HKGrotesk;
-  src: url("../../../../HP/Downloads/HKGroteskWide_2020D/HKGroteskWide_2020D/OTF/HKGroteskWide-Regular.otf");
+  src: url("HKGroteskWide-Regular.otf");
 }
 body {
   background-image: url("jeremy-perkins-7S1yZoFcVV0-unsplash.jpg");
